--- a/combine/estilos.css
+++ b/combine/estilos.css
@@ -1,3 +1,7 @@
-.dat{
-	padding-left: 50px;
+.navbar-right {
+    margin-top: 20px;
 }
+.navbar.navbar-default .navbar-brand {
+    height: auto;
+    padding: 0px 0px 0px;
+ }
