--- a/combine/styles2.css
+++ b/combine/styles2.css
@@ -1,7 +1,11 @@
 .navbar-right {
-    margin-top: 20px;
+    margin-top: 19px;
 }
 .navbar.navbar-default .navbar-brand {
     height: auto;
     padding: 0px 0px 0px;
  }
+
+.fa-3x {
+    background-color:;
+}
